src/assets/style/_variables.scss
// Light default theme
body {
	--font-size: 1.2rem;
	--font-family: 'Roboto', -apple-system, BlinkMacSystemFont, avenir next, avenir, segoe ui, helvetica neue, helvetica, Ubuntu, roboto, noto, arial, sans-serif;

	--color-dark: #162128;
	--color-light: #ffffff;
	--color-gray: #cfcfcf;

 	--body-bg: var(--color-light);
 	--text-color: var(--color-dark);
 	--text-color-invert: #fff;

 	--code-bg: var(--color-dark);
 	--code-bg-inline: rgba(179, 37, 133, 0.06);
 	--code-text: #fff;
 	--code-text-inline: rgb(179, 37, 133);

 	--title-color: #111;
 	--link-color: #449ff2;
 	--border-color-light:  rgba(0,0,0,.1);
 	--border-color: #dbdbdb;
	--color-btn: var(--link-color);

 	--table-bg: transparent;
 	--table-thead-bg: #fceb8f;
 	--table-tr-hover: #fffbea;

 	--header-color-bg: #0e161a;
 	--header-color-text: #ced8de;

	--color-focus: rgb(163, 221, 255);
	--color-focus-light: rgb(238, 247, 255);
	--color-link-background-highlight: #f0f7ff;

	--color-note-accent: #90a4b7;
	--color-note-pale: #f2f2f2;
	--color-note-text: var(--text-color);
	--color-note-accent--okay: #4ab85c;
	--color-note-pale--okay: #e3fee4;
	--color-note-accent--warning: #f4a434;
	--color-note-pale--warning: #fff1dd;
 	

  --space: 3.5rem;
  --space-text: 1.25rem;
  --content-width: 820px;
  --page-width: 1660px;
  --radius: 4px;

  --width-sidebar-left: 250px;
  --width-sidebar-right: 250px;
}

// Make  things smaller for mobile
@media screen and (max-width: 1080px) {
	body {
		--space: 2rem;
	}
}


// Override variables for Dark theme
body[data-theme="dark"] {
 	--body-bg: #213039;
 	--text-color: #ced8de;
 	--text-color-invert: var(--color-dark);

 	--code-bg-inline: rgba(94, 23, 67, 0.288);
	--code-text-inline: rgb(255, 60, 193);

 	--title-color: #fff;
 	--link-color: #fceb8f;
 	--border-color:  #5f5f5f;

 	--table-bg: var(--color-dark:);
 	--table-thead-bg: #0d1b26;
 	--table-tr-hover: #122636;

	 --color-focus: rgb(9, 61, 95);
	 --color-focus-light: rgb(5, 94, 153);
	 --color-link-background-highlight: var(--color-dark);

	--color-note-accent: #384856;
	--color-note-pale: #687784;
	--color-note-text: #ffffff;
	--color-note-accent--okay: #234a2a;
	--color-note-pale--okay: #559a61;
	--color-note-accent--warning: #8b560c;
	--color-note-pale--warning: #d19746;
}

